force-app/main/default/objects/Comment_Reply__c/Comment_Reply__c.object-meta.xml
<CustomObject>
    <label>Comment Reply</label>
    <nameField>
        <label>Comment Reply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comment Replies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>