force-app/main/default/objects/Comment_Reply__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <referenceTo>Comment__c</referenceTo>
    <relationshipLabel>Comment Replies</relationshipLabel>
    <relationshipName>Comment_Replies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>