force-app/main/default/objects/Comment_Reply__c/fields/Parent_Reply__c.field-meta.xml
<CustomField>
    <fullName>Parent_Reply__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Reply</label>
    <referenceTo>Comment_Reply__c</referenceTo>
    <relationshipLabel>Comment Replies</relationshipLabel>
    <relationshipName>Parent_Replies</relationshipName>
    <type>Lookup</type>
</CustomField>