force-app/main/default/objects/Comment_Reply__c/fields/Reply_Text__c.field-meta.xml
<CustomField>
    <fullName>Reply_Text__c</fullName>
    <label>Reply Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>